--- a/vscode/vscode-keybindings.jsonc
+++ b/vscode/vscode-keybindings.jsonc
@@ -91,6 +91,11 @@
         "when": "editorHasCodeActionsProvider && editorTextFocus && !editorReadonly"
     },
     {
+        "key": "cmd+l",
+        "command": "editor.action.formatDocument",
+        "when": "editorHasDocumentFormattingProvider && editorHasDocumentFormattingProvider && editorTextFocus && !editorReadonly && !inCompositeEditor"
+    },
+    {
         "key": "cmd+m",
         "command": "references-view.findImplementations"
     },
@@ -122,7 +127,7 @@
         "command": "cursorLineEndSelect"
     },
     {
-        "key": "cmd+a",
+        "key": "ctrl+a",
         "command": "cursorHome"
     },
     {
@@ -132,6 +137,10 @@
     {
         "key": "cmd+l",
         "command": "editor.action.formatDocument",
+    },
+    {
+        "key": "cmd+r",
+        "command": "workbench.action.reloadWindow"
     },
     {
         "key": "cmd+k cmd+a",
